# tab-player-cli

./: .gitignore  Cargo.toml  README.md  song.txt
player/: Cargo.toml
player/src/: lib.rs
src/: main.rs  parser.rs
test/: gold-template.txt  seven-nation-army-full.txt  seven-nation-army-one-line.txt  seven-nation-army.txt
