[package]
name = "tab-synth"
version = "0.1.0"
authors = ["Elias <elias.reid2@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = "2.33.3"
itertools = "0.9.0"
player = { path = "./player"}

[workspace]
members = [
  "player"
]